syntax = "proto3";

package zksync.roles.validator;

import "zksync/roles/validator/discovery.proto";
import "zksync/roles/validator/genesis.proto";
import "zksync/roles/validator/keys.proto";
import "zksync/roles/validator/v2.proto";
import "zksync/std.proto";

message PreGenesisBlock {
  optional uint64 number = 1; // required
  optional bytes payload = 2; // required
  optional bytes justification = 3; // required
}

message Block {
  reserved 1;
  reserved "final";

  // required
  oneof t {
    FinalBlockV2 final_v2 = 3;
    PreGenesisBlock pre_genesis = 2;
  }
}

message ConsensusMsg {
  reserved 1, 2, 3, 4, 5, 6, 7;
  reserved "replica_prepare", "leader_prepare", "leader_commit", "replica_commit", "replica_timeout", "replica_new_view", "leader_proposal";

  // required
  oneof t {
    ChonkyMsgV2 v2 = 8;
  }
}

message Msg {
  // required
  oneof t {
    ConsensusMsg consensus = 1;
    bytes session_id = 2;
    NetAddress net_address = 3;
  }
}

message MsgHash {
  optional bytes keccak256 = 1; // required
}

message Signed {
  optional Msg msg = 1; // required
  optional PublicKey key = 2; // required
  optional Signature sig = 3; // required
}

message ReplicaState {
  reserved 1, 2, 3, 4, 5, 6;
  reserved "view", "phase", "high_vote", "high_qc", "proposals", "high_timeout_qc";

  // required
  oneof t {
    ChonkyV2State v2 = 7;
  }
}